[gd_scene load_steps=18 format=3 uid="uid://csjhhye6wljfl"]

[ext_resource type="Script" path="res://scripts/coin.gd" id="1_juc0n"]
[ext_resource type="Texture2D" uid="uid://cd0kab80ex2vd" path="res://assets/sprites/coin.png" id="1_rvp2m"]
[ext_resource type="AudioStream" uid="uid://ba2otljvxs0b6" path="res://assets/sounds/coin.wav" id="3_pal5y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x3ib8"]
atlas = ExtResource("1_rvp2m")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba461"]
atlas = ExtResource("1_rvp2m")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibe3q"]
atlas = ExtResource("1_rvp2m")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4poik"]
atlas = ExtResource("1_rvp2m")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvl2f"]
atlas = ExtResource("1_rvp2m")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3swc1"]
atlas = ExtResource("1_rvp2m")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2g0ip"]
atlas = ExtResource("1_rvp2m")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vw61"]
atlas = ExtResource("1_rvp2m")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w83wj"]
atlas = ExtResource("1_rvp2m")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iln11"]
atlas = ExtResource("1_rvp2m")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfj2o"]
atlas = ExtResource("1_rvp2m")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ri1t4"]
atlas = ExtResource("1_rvp2m")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_yrilr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3ib8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba461")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibe3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4poik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvl2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3swc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2g0ip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vw61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w83wj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iln11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfj2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ri1t4")
}],
"loop": true,
"name": &"default",
"speed": 9.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_d0q7i"]
radius = 5.0

[node name="coin" type="Area2D"]
collision_mask = 2
script = ExtResource("1_juc0n")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yrilr")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_d0q7i")

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_pal5y")
bus = &"SFX"

[node name="EraseTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="EraseTimer" to="." method="_on_erase_timer_timeout"]
